maj json config_joueur lors du téléchargement

--- a/demandeEnregistrement.html
+++ b/demandeEnregistrement.html
@@ -62,6 +62,8 @@ Ton ancienne partie va être supprimé. <br>
             '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
             '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
             '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
+            '  "pieces": "' + localStorage.getItem("pieces") +'"\n' +
+            '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
             '}';
         var filename = "config_joueur.json";
 
