--- a/stock.html
+++ b/stock.html
@@ -189,6 +189,8 @@ for (i=0; i<=13; i++){
             '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
             '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
             '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
+            '  "pieces": "' + localStorage.getItem("pieces") +'"\n' +
+            '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
             '}';
         var filename = "config_joueur.json";
 
