--- a/caisse.html
+++ b/caisse.html
@@ -408,6 +408,8 @@ document.getElementById("dwn-btn").addEventListener("click", function(){
         '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
         '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
         '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
+        '  "pieces": "' + localStorage.getItem("pieces") +'"\n' +
+        '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
         '}';
     var filename = "config_joueur.json";
 
