bulle pour mettre en plein écran

--- a/creerPartie.html
+++ b/creerPartie.html
@@ -41,7 +41,7 @@
         const val_bonne_reponse= 0;
         const key_tentative = "tentative";
         const val_tentative = 0;
-        const key_piece = "piece";
+        const key_piece = "pieces";
         const val_piece = 0;
 
         if (key_prenom && val_prenom) {
