--- a/demandeEnregistrement.html
+++ b/demandeEnregistrement.html
@@ -38,7 +38,7 @@
 </style>
 <body>
 <div id="txt">
-Ton ancienne partie va être supprimé. <br>
+Ton ancienne partie va être supprimée. <br>
     Veux-tu la télécharger?<br>
     </div><div id="btn">
     <input type="button" value="OUI" id="oui">
@@ -86,4 +86,14 @@ Ton ancienne partie va être supprimé. <br>
     }
 </script>
 </body>
+<style>
+    <style>
+    .bulle {
+        display:none;
+    }
+    .survol:hover .bulle {
+        display: block;
+    }
+    </style>
+</style>
 </html>
