--- a/init.html
+++ b/init.html
@@ -10,6 +10,7 @@
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
+
 <body>
 <input type="button" value="MENU PRINCIPAL" id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
 <div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
@@ -17,6 +18,56 @@
     <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">CREER UNE NOUVELLE PARTIE</a>
     <a href="recuperer_compte.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">IMPORTER UNE PARTIE</a>
 </div>
+<div class="survol">
+    <div class="bulle">
+        <div id="bulle" style="position: absolute;
+    right:7em;
+    bottom: 17em;
+    background-color:white;
+    text-align:center;
+    width:300px;
+    height:160px;
+    border:2px solid #555555;
+border-top-right-radius:80px 40px;
+border-top-left-radius:80px 40px;
+border-bottom-right-radius:80px 40px;
+border-bottom-left-radius:80px 40px;
+display: block; margin : auto;
+">
+    <span id="output" style="
+font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */
+font-weight:bold;
+font-size:2em;
+position:relative;
+top:5px">Appuie sur la touche <b>f11</b> pour mettre en plein écran</span>
+            <span id="arrow_border" style="
+width: 0;
+height: 0;
+line-height: 0;
+border-bottom:30px solid transparent;
+border-left:30px solid transparent;
+border-right:30px solid #555555; /* couleur de la bordure de la bulle */
+position:absolute;
+bottom:-30px;
+right:65px;
+
+"></span>
+            <span id="arrow_inner" style="
+width: 0;
+height: 0;
+line-height: 0;
+border-bottom:30px solid transparent;
+border-left:30px solid transparent;
+border-right:30px solid #555555; /* couleur de la bordure de la bulle */
+position:absolute;
+bottom:-25px;
+right:67px;
+
+"></span>
+        </div>    </div>
+    <img src="image/chat.png" style="position: absolute; display: block; right: 2em; bottom: 2em">
+</div>
+
 
 <script>
     document.getElementById("menupcp").addEventListener("click", function(){
@@ -25,5 +76,12 @@
     }, false);
 </script>
 </body>
-
+    <style>
+    .bulle {
+        display:none;
+    }
+    .survol:hover .bulle {
+        display: block;
+    }
+    </style>
 </html>
