musique de fond index

--- a/init.html
+++ b/init.html
@@ -10,8 +10,19 @@
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
-
+<script>
+    var myAudio = document.createElement("audio");
+    myAudio.src = "hilal.mp3";
+    myAudio.play();
+    //myAudio.pause();
+</script>
 <body>
+
+
+<!--<audio controls="controls" autoplay >
+    <source src="musique/hilal.mp3" type="audio/mp3">
+    <p class="message-error">This media is not supported by your browser.</p>
+</audio>-->
 <input type="button" value="MENU PRINCIPAL" id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
 <div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
 <div id="body_bky">
