--- a/demandeEnregistrement.html
+++ b/demandeEnregistrement.html
@@ -52,7 +52,7 @@ Ton ancienne partie va être supprimée. <br>
 
     document.getElementById("non").addEventListener("click", function(){
         localStorage.clear();
-        location = "creerPartie.html";
+        location = "recuperer_compte.html";
     }, false);
 
     document.getElementById("oui").addEventListener("click", function(){
