--- a/magasin.html
+++ b/magasin.html
@@ -174,8 +174,8 @@
             '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
             '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
             '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
-            '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
-            '  "pieces": "' + localStorage.getItem("pieces") +'"\n' +
+            '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'",\n' +
+            '  "pieces": "' + localStorage.getItem("pieces") +'",\n' +
             '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
             '}';
         var filename = "config_joueur.json";
