correction chemin (demander téléchargement avant suppression ou importation)
2 destinations différentes selon si c'est une suppression ou une importation

--- a/caisse.html
+++ b/caisse.html
@@ -18,8 +18,8 @@
         <a href="./stock.html">Stock</a>
         <a href="./magasin.html">Magasin</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="supprimer_joueur.html">Supprimer ma partie</a>
-        <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
+        <a href="demanderEnregistrement_supprimer.html">Supprimer ma partie</a>
+        <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
     </div>
 </div>
 <script>
