--- a/demandeEnregistrement_importer.html
+++ b/demandeEnregistrement_importer.html
@@ -69,7 +69,7 @@ Ton ancienne partie va être supprimée. <br>
 
         download(filename, text);
 
-        location = "creerPartie.html";
+        location = "recuperer_compte.html";
 
     }, false);
 
@@ -87,7 +87,6 @@ Ton ancienne partie va être supprimée. <br>
 </script>
 </body>
 <style>
-    <style>
     .bulle {
         display:none;
     }
@@ -95,5 +94,4 @@ Ton ancienne partie va être supprimée. <br>
         display: block;
     }
     </style>
-</style>
 </html>
