--- a/magasin.html
+++ b/magasin.html
@@ -14,8 +14,8 @@
         <a href="./caisse.html">Caisse</a>
         <a href="./stock.html">Stock</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="supprimer_joueur.html">Supprimer ma partie</a>
-        <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
+        <a href="demanderEnregistrement_supprimer.html">Supprimer ma partie</a>
+        <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
     </div>
 </div>
 <!--PIECE-->
@@ -151,7 +151,6 @@
             }
   }
 </script>
-<script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
     //téléchargement du fichir json avec les informations du joueur
