--- a/stock.html
+++ b/stock.html
@@ -15,8 +15,8 @@
         <a href="./caisse.html">Caisse</a>
         <a href="./magasin.html">Magasin</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="supprimer_joueur.html">Supprimer ma partie</a>
-        <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
+        <a href="demandeEnregistrement_supprimer.html">Supprimer ma partie</a>
+        <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
     </div>
 </div>
 <script>/* When the user clicks on the button,
