création telechargement_json_config_joueur.html

--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -37,6 +37,7 @@
         localStorage.setItem('niveau', newArr.niveau)
         localStorage.setItem('tentative', newArr.tentative)
         localStorage.setItem('bonne_reponse', newArr.bonne_reponse)
+        localStorage.setItem('pieces', newArr.pieces)
         location = "debut_jeu.html"
 
 
