--- a/caisse.html
+++ b/caisse.html
@@ -391,33 +391,10 @@ console.log(tentatives)
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
-//téléchargement du fichir json avec les informations du joueur
-    //https://ourcodeworld.com/articles/read/189/how-to-create-a-file-and-generate-a-download-with-javascript-in-the-browser-without-a-server
-    function download(filename, text) {
-        var element = document.createElement('a');
-        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
-        element.setAttribute('download', filename);
 
-        element.style.display = 'none';
-        document.body.appendChild(element);
-
-        element.click();
-        document.body.removeChild(element);
-    }
 // Start file download.
 document.getElementById("dwn-btn").addEventListener("click", function(){
-    // Generate download of config_joueur.json file with some content
-    var text = '{\n' +
-        '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
-        '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
-        '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
-        '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'",\n' +
-        '  "pieces": "' + localStorage.getItem("pieces") +'",\n' +
-        '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
-        '}';
-    var filename = "config_joueur.json";
-
-    download(filename, text);
+    location="telechargement_json_config_joueur.html"
 }, false);
 
 
