--- a/caisse.html
+++ b/caisse.html
@@ -54,18 +54,19 @@ window.onclick = function(event) {
     <img id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
     <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
     <img id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
+    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 20em;bottom: 3em; left: 27em">
 
 </div>
 
-<div style="float: left;">
-    <div id="bulle" style="position: relative;right:50px; margin-top: 9em;background-color:white;text-align:center; height: 15em; padding:1em;border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;margin-left: 5em;">
+<div style="float: left; margin-left: 1em">
+    <div id="bulle" style="position: relative;right:50px; margin-top: 5em;background-color:white;text-align:center; height: 15em; padding:1em;border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;margin-left: 5em;">
         <span id="output" style=" font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */ font-weight:bold;font-size:2em;position:relative;top:26px;"></span>
         <span id="arrow_border" style="width: 0;height: 0;line-height: 0;border-bottom:0px solid transparent;border-left:30px solid transparent;border-right:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-30px;left:65px;"></span>
-        <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;left:67px;"><span>
+        <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;right:150px;"><span>
     </div>
-    <img src="./image/chien.PNG" style="width: 10em; margin-left: 1em;">
-    <img src="./image/caisse.png" style="width: 15em">
-    <img src="./image/chat.png" style="width: 10em">
+    <img src="./image/chien.PNG" style="width: 10em; margin-left: 1em;position: absolute; left: 7em; bottom: 7em">
+    <img src="./image/caisse.png" style="width: 15em; position: absolute; left:9em; bottom: 0em">
+    <img src="./image/chat.png" style="width: 10em; position: absolute; left: 22em; bottom: 1em">
 </div>
 <div id="score" style="position: absolute; margin-bottom: 0.5em;right: 1em; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 4em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none;""></div>
 <div id="calculette" style="position:absolute;right:2em;background-color: orangered; width: 46%; top:10em; border-radius: 40px">
@@ -367,9 +368,9 @@ window.onclick = function(event) {
         pieces_affichage.innerHTML = `${nb_pieces} pièce`;
     }
 
-
+//3 lumières bleues pour afficher l'avancement vers le prochaine niveau
     tentatives = localStorage.getItem("bonne_reponse")
-console.log(tentatives)
+    console.log(tentatives)
     const te = document.getElementById("nb_tentatives");
 
     switch (parseInt(tentatives)) {
@@ -382,8 +383,31 @@ console.log(tentatives)
         case 2:
             te.src = "./image/t2.svg"
             break;
+    }
 
+    //présentoire boulangerie
+    niveau_joueur = localStorage.getItem("niveau")
+    const presentoire = document.getElementById("presentoire");
 
+    switch (parseInt(niveau_joueur)) {
+        case 0: case 1:
+            presentoire.src = "./image/presentoire_niveau0.png"
+            break;
+        case 2: case 3:
+            presentoire.src = "./image/presentoire_niveau2.png"
+            break;
+        case 4: case 5:
+            presentoire.src = "./image/presentoire_niveau4.png"
+            break;
+        case 6: case 7:
+            presentoire.src = "./image/presentoire_niveau6.png"
+            break;
+        case 8:
+            presentoire.src = "./image/presentoire_niveau8.png"
+            break;
+        case 9:
+            presentoire.src = "./image/presentoire_niveau9.png"
+            break;
     }
 
 
